feat: 国际化支持，将插件翻译为英文并更新图标资源
- 将插件名称、描述和界面文本从中文翻译为英文
- 替换SVG图标为多尺寸PNG图标
- 更新manifest.json配置，移除geolocation权限
- 同步更新README和选项页面的翻译内容

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>桌面时钟</title>
+  <title>Vitality Clock</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -46,16 +46,16 @@
       <div class="weather-icon" id="weatherIcon"></div>
       <div class="weather-info">
         <div class="temperature" id="temperature">--°C</div>
-        <div class="weather-desc" id="weatherDesc">加载中...</div>
+        <div class="weather-desc" id="weatherDesc">Loading...</div>
       </div>
       <div class="weather-details">
         <div class="detail-item">
-          <span class="detail-label">湿度</span>
+          <span class="detail-label">Humidity</span>
           <span class="detail-value" id="humidity">60%</span>
         </div>
         <div class="detail-item">
-          <span class="detail-label">风力</span>
-          <span class="detail-value" id="wind">3级</span>
+          <span class="detail-label">Wind</span>
+          <span class="detail-value" id="wind">Level 3</span>
         </div>
       </div>
     </div>
